# Escher

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK_STANDARD.md  HANDOFF_LOG.md  README.md  STUDY_PLAN.md  V1-PLAN.md  pyproject.toml
analysis/: __init__.py
analysis/metrics/: __init__.py  collector.py  comparison.py  exporter.py
analysis/metrics/benchmark_run/: benchmark_report.json
analysis/metrics/benchmark_run/baseline_no_faults/: GEN_ALL_FailedRequests.csv  GEN_ALL_SuccessfulRequests.csv  R[service2.db_lookup]_ResponseTimes.csv  S[gateway]_InstanceCount.csv  S[service1]_InstanceCount.csv  effective_config.json  run_metadata.json
analysis/metrics/benchmark_run/resilience_kill_summon/: R[All]_ResponseTimes.csv  R[service1.calc]_ResponseTimes.csv  S[service1]_InstanceCount.csv  effective_config.json  run_metadata.json  run_metrics.json
analysis/metrics/benchmark_run/scalability_100k/: CB[global]_StateTimeline.csv  (+5 more)
core/: __init__.py  clock.py  engine.py  event_queue.py  simpy_engine.py
experiments/: __init__.py
experiments/configs/: benchmark_suite.json  smoke_scenario.json  v1_contract_example.json
experiments/runners/: benchmark_runner.py  smoke_runner.py
model/: __init__.py  rng.py
model/resilience/: __init__.py  autoscaler.py  circuit_breaker.py  connection_limiter.py  load_balancer.py  retry.py
model/resources/: __init__.py  dependency.py  service_graph.py  service_instance.py
model/workloads/: __init__.py  generators.py  request.py
tests/: test_benchmark_runner.py  test_engine.py  test_run_artifacts.py  test_smoke_runner.py
